# secd-machine

./: .gitignore  CMakeLists.txt  README.md  assembler.cpp  fact.asm  secd.cpp
inc/: common.h  machine.h  opcode.h  registers.h
inc/assembler/: #format.h#  attribute.h  file.h  util.h  value.h
inc/vm/: machine.h  opcode.h  registers.h  value.h
src/: CMakeLists.txt  machine.cpp  opcode.cpp  registers.cpp  value.cpp
src/assembler/: file.cpp  util.cpp  value.cpp
src/vm/: machine.cpp  opcode.cpp  registers.cpp  value.cpp
